--- a/index.html
+++ b/index.html
@@ -7,72 +7,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <!-- <link rel="stylesheet" href="style.css" type="text/css"> -->
-
     <style>
-      /* #head {
-        color: blue;
+      h1 {
+
+        color: rgba(244, 120, 150, 0.5);
+        font-size: 20px;
+        text-transform: uppercase;
+        text-align: center;
+        background-color: black;
+        text-shadow: 1px 11px 2px rgba(38, 89, 128, 9);
+        text-decoration: 5px underline solid red;
+
       }
 
-      .box p {
-        color: brown;
-      } */
-
-      span,
-      h3,
       .box {
-        color: chartreuse;
+        font-size: 1rem;
       }
 
-      .box2>h1 {
-        color: purple;
-      }
-
-      .box3>h1 {
-        color: yellow;
-      }
-
-      /* 
-      .bx+p {
-        color: red;
-      } */
-
-      .bx~p {
-        color: red;
+      p {
+        text-align: justify;
+        text-indent: 10px;
+        line-height: 1rem;
+        word-spacing: 1rem;
       }
     </style>
-
   </head>
 
   <body>
 
-    <div class="bx">
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis, dolorem! Aperiam sint sapiente accusamus quam
-        adipisci facere laboriosam inventore ex sunt eaque temporibus, iure, possimus officia odio repellat. Amet, in.
-      </p>
-    </div>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, nobis.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, magnam!</p>
-    <span>Hello span</span>
-    <h3>Hello h3</h3>
-    <div id="head">
-      <h1>Sample Logo</h1>
-    </div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio doloremque voluptatibus doloribus laborum et
+      fugiat officia voluptates nihil, at quibusdam.</p>
+    <h1>Text formatting</h1>
 
-    <div class="box2">
-      <h1>Direct Content</h1>
-      <div class="box3">
-        <h1>Box3 content</h1>
-      </div>
-    </div>
+
     <div class="box">
-      <h1>My Article</h1>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque voluptas blanditiis velit consequuntur beatae
-        perferendis enim fugit corporis ad sunt.</p>
+      <h1>Text</h1>
     </div>
-    <h1>Hello Web Css</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor veniam doloremque nihil nisi adipisci
-      reprehenderit, dicta iure. Quibusdam, illum iste.</p>
   </body>
 
 </html>
