--- a/index.html
+++ b/index.html
@@ -6,43 +6,176 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
-    <style>
-      h1 {
-
-        color: rgba(244, 120, 150, 0.5);
-        font-size: 20px;
-        text-transform: uppercase;
-        text-align: center;
-        background-color: black;
-        text-shadow: 1px 11px 2px rgba(38, 89, 128, 9);
-        text-decoration: 5px underline solid red;
-
-      }
-
-      .box {
-        font-size: 1rem;
-      }
-
-      p {
-        text-align: justify;
-        text-indent: 10px;
-        line-height: 1rem;
-        word-spacing: 1rem;
-      }
-    </style>
   </head>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    .box {
+      height: 200px;
+      width: 200px;
+      border: 1px black solid;
+      background-color: blueviolet;
+      color: white;
+      /* margin: 0 auto; centers content */
+      /* margin:; top right bottom left */
+      /* margin: 10px;
+      padding: 10px; */
+      /* margin-top: 10px;*/
+      /* margin: 5px 10px 5px 4px; */
+      /* margin: 10px 0; */
+      padding: 10px;
+      /* overflow: auto; */
+      overflow: auto;
+    }
+
+    .box1 {
+      height: 200px;
+      width: 200px;
+      border: 1px black solid;
+      background-color: blueviolet;
+      color: white;
+      /* margin: 0 auto; centers content */
+      /* margin:; top right bottom left */
+      /* margin: 10px;
+      padding: 10px; */
+      /* margin-top: 10px;*/
+      /* margin: 5px 10px 5px 4px; */
+      /* margin: 10px 0; */
+      padding: 10px;
+      margin-left: 200px;
+      margin-top: -200px;
+    }
+
+    .box2 {
+      height: 200px;
+      width: 200px;
+      border: 1px black solid;
+      background-color: blueviolet;
+      color: white;
+      /* margin: 0 auto; centers content */
+      /* margin:; top right bottom left */
+      /* margin: 10px;
+      padding: 10px; */
+      /* margin-top: 10px;*/
+      /* margin: 5px 10px 5px 4px; */
+      /* margin: 10px 0; */
+      padding: 10px;
+      margin-left: 400px;
+      margin-top: -200px;
+    }
+
+    .box3 {
+      height: 200px;
+      width: 200px;
+      border: 1px black solid;
+      background-color: blueviolet;
+      color: white;
+      /* margin: 0 auto; centers content */
+      /* margin:; top right bottom left */
+      /* margin: 10px;
+      padding: 10px; */
+      /* margin-top: 10px;*/
+      /* margin: 5px 10px 5px 4px; */
+      /* margin: 10px 0; */
+      padding: 10px;
+      margin-left: 600px;
+      margin-top: -200px;
+    }
+
+    .box4 {
+      height: 200px;
+      width: 200px;
+      border: 1px black solid;
+      background-color: blueviolet;
+      color: white;
+      /* margin: 0 auto; centers content */
+      /* margin:; top right bottom left */
+      /* margin: 10px;
+      padding: 10px; */
+      /* margin-top: 10px;*/
+      /* margin: 5px 10px 5px 4px; */
+      /* margin: 10px 0; */
+      padding: 10px;
+      margin-left: 800px;
+      margin-top: -200px;
+    }
+
+    .box5 {
+      width: 500px;
+      height: 400px;
+      border: 1px red solid;
+      margin-top: 50px;
+    }
+
+    .box-one {
+      height: 200px;
+      width: 200px;
+      border: 1px black solid;
+      background-color: blueviolet;
+      color: white;
+      /* margin: 0 auto; centers content */
+      /* margin:; top right bottom left */
+      /* margin: 10px;
+      padding: 10px; */
+      /* margin-top: 10px;*/
+      /* margin: 5px 10px 5px 4px; */
+      /* margin: 10px 0; */
+      padding: 10px;
+
+    }
+
+    img {
+      width: 100%;
+      height: 100%;
+    }
+  </style>
 
   <body>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio doloremque voluptatibus doloribus laborum et
-      fugiat officia voluptates nihil, at quibusdam.</p>
-    <h1>Text formatting</h1>
-
+    <div class="box">
+      <h3>Box</h3>
+      <div class="box-one">
+        <h3>Box 1</h3>
+      </div>
+    </div>
+    <div class="box1">
+      <h3>Box 1</h3>
+    </div>
+    <div class="box2">
+      <h3>Box 2</h3>
+    </div>
+    <div class="box3">
+      <h3>Box 3</h3>
+    </div>
+    <div class="box4">
+      <h3>Box 4</h3>
+    </div>
 
     <div class="box">
-      <h1>Text</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet eaque illo, incidunt quasi rem, eius, saepe velit
+        doloremque expedita quia laborum repudiandae? Mollitia est iure cumque facere accusamus et quo hic doloribus
+        aliquam possimus, delectus consequuntur. Expedita laboriosam, dolorum eveniet doloremque voluptates quaerat
+        voluptas officia nesciunt est ullam, veniam vero corrupti aut? Obcaecati quos libero vero voluptates voluptas
+        repudiandae molestiae aliquam rerum corrupti cupiditate atque hic vitae dolorum nihil saepe nemo, culpa error!
+        Itaque facere odit natus porro. Vero, nemo deserunt corporis distinctio sed inventore eaque incidunt ipsum
+        consequatur doloremque, qui suscipit excepturi nostrum fugit. Dolores quaerat omnis, suscipit consequatur beatae
+        animi tempore ducimus dignissimos earum, fugiat dicta vel quibusdam autem. Cupiditate quaerat quo praesentium
+        laboriosam vero, error, mollitia molestias quibusdam expedita itaque alias veritatis! Ipsum voluptate aut amet,
+        officiis beatae eos aspernatur, nesciunt magni sequi, enim earum! Velit dicta mollitia incidunt ducimus
+        consectetur voluptatum hic neque obcaecati nam corrupti! Aut veritatis ipsa laboriosam quod. Aliquam facere
+        incidunt, impedit est, eius mollitia beatae dolore adipisci deserunt exercitationem consectetur dicta laborum,
+        tenetur consequuntur? Modi ab reiciendis, cupiditate facere nulla temporibus blanditiis consequuntur iste magni
+        nesciunt dolorum ipsa tempore labore illum ipsam esse corporis debitis, dicta vitae dolores voluptas numquam ex
+        sint.</p>
     </div>
+    <div class="box5">
+      <img src="img.avif" alt="">
+    </div>
+
   </body>
 
 </html>
